Feat/order totals (#33)
* feat(models): add tax and discount support at order item level

- Order items now inherit tax rates from their associated variant
- Order-level discounts are distributed across all order items
- Order total is now the sum of order items total

* feat(dto): remove duplicate CreateVariant DTO and add taxRate field

- Removed redundant CreateVariant DTO definition
- Added taxRate field to CreateVariant DTO

* feat(product): update create variant dto names in handler

- handle `variant not found` in variant update handler

* feat(dto): update order and order item dtos to support discount and tax at order item level

- Remove tax from order
- remove `calculateTotals` function because it's not working anymore
- Use ordertotal package to calculate order and order items total

* feat(ordertotal): add ordertotal package that provides provides utilities to calculate discounts, taxes,
and totals for orders and their items

* feat(numbergen): add numbergen package for generating random numbers with prefix.

This is use to replace `generateOrderNumberPackage` because it can use to generate any random number, not only order number

* feat(order_test): fix and add more assertions to order tests

* feat(product_test): fix and add more assertions to product and variant tests

* feat(docs): add docs for order_total calculation and update todo.md

* feat(swagger): Update api docs

* feat(dto): remove tax from `CreateOrderDto` since we are now calculating tax at order item level based on tax rate on variant

* feat(swagger): update doc to reflect tax removal from `CreateOrder` dto
